# src/api/contexts/Conteudo/Levante.Conteudo.Application/Midias/RemoverMidia/RemoverMidiaCommand.cs
@@ -1,0 +1,3 @@
+namespace Levante.Conteudo.Application.Midias.RemoverMidia;
+
+public sealed record RemoverMidiaCommand(Guid Id);
